--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1122.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongodb": "^4.5.0"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/node": "^16.4.6",
