--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "aws-sdk": "^2.1122.0",
     "body-parser": "^1.19.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "glob": "^8.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.4.6",
