--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aws-sdk": "^2.1122.0",
     "body-parser": "^1.19.0",
+    "convert-units": "^2.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "glob": "^8.0.1"
